# qt_notepad

./: .gitignore  CMakeLists.txt  README.md
headers/: notepad.h
src/: main.cpp  notepad.cpp
